--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
-  <body>   
+  <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 offset-md-3">
@@ -23,24 +23,35 @@
           <h3>Search Books</h3>
 
           <div class="form-group">
-            <input type="text" id="post-name" class="form-control">
+            <input type="text" id="search-query" class="form-control">
             </input>
           </div>
 
-          <button class="btn btn-primary search">Search</button>
+          <button type='button' class="btn btn-primary search">Search</button>
         </form>
-        
+
         <hr/>
 
-        <div class="books">
-          
+        <div class="books row">
+
         </div>
       </div>
     </div>
-    </div> 
+    </div>
+
+  <script id="book-template" type="text/x-handlebars-template">
+    <div class="book col-md-6">
+      <h4>{{ title }}</h4>
+      <div>Author: <strong>{{ author }}</strong></div>
+      <div>Pages: <strong>{{ pageCount }}</strong></div>
+      <div>ISBN: <strong>{{ isbn }}</strong></div>
+      <img src="{{imageURL}}" alt="">
+    </div>
+  </script>
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <script src="main.js" type="text/javascript"></script>
